--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mines",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
